<resources>
    <string name="app_name">MadLevel4Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="win_draw_lose">Win: %d Draw:%d Lose:%d</string>
    <string name="history">History</string>
    <string name="history_title">Game History</string>
    <string name="result_text">result text</string>
    <string name="date_placeholder">date placeholder</string>
    <string name="cpu_img">cpu image</string>
    <string name="player_img">player image</string>
    <string name="player">Player</string>
    <string name="cpu">Computer</string>
    <string name="vs">V.S</string>
    <string name="cpuhand">cpuhand</string>
    <string name="playerhand">playerhand</string>
</resources>