<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="700px"
    android:background="#B9FBF3F3">


    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:text="@string/result_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-4dp" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/date_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/tvResult"
        tools:layout_editor_absoluteX="0dp" />


    <ImageView
        android:id="@+id/playerHistory"
        android:layout_width="147dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:layout_weight="1"
        android:background="#2D27E5"
        android:contentDescription="@string/cpu_img"
        android:src="@drawable/rock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDate" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/vs"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cpuHistory"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/playerHistory"
        app:layout_constraintTop_toBottomOf="@+id/tvDate"
        app:layout_constraintVertical_bias="0.37" />

    <ImageView
        android:id="@+id/cpuHistory"
        android:layout_width="154dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:background="#2D27E5"
        android:contentDescription="@string/player_img"
        android:src="@drawable/rock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDate"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/cpu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpuHistory"
        app:layout_constraintVertical_bias="0.097" />

    <TextView
        android:layout_width="155dp"
        android:layout_height="19dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/player"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/playerHistory"
        app:layout_constraintVertical_bias="0.177" />


</androidx.constraintlayout.widget.ConstraintLayout>